[gd_scene load_steps=6 format=3 uid="uid://cr6d2d8irg80u"]

[ext_resource type="Script" uid="uid://bw5y5nsjv7rpt" path="res://scripts/game_ui.gd" id="1_yubou"]
[ext_resource type="AudioStream" uid="uid://c4hijayvf80og" path="res://sound/ui/strawberry_red_get_5000.wav" id="2_bt76a"]
[ext_resource type="AudioStream" uid="uid://p2ju3h4mrhtn" path="res://sound/ui/strawberry_gold_get_5000.wav" id="3_djwj0"]
[ext_resource type="AudioStream" uid="uid://cp8wob2vuktxp" path="res://sound/ui/ui_main_button_select.wav" id="4_e0pfi"]
[ext_resource type="AudioStream" uid="uid://bhy4ndjfwwhaa" path="res://sound/ui/ui_main_button_climb.wav" id="5_o3bws"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_yubou")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BoostLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BOOST"

[node name="BoostBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SPEED"

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TIMER"

[node name="CompletionMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -274.0
offset_right = 20.0
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50

[node name="NewBestLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -224.0
offset_right = 20.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.725407, 0.569872, 0.155287, 1)
theme_override_font_sizes/font_size = 50

[node name="CompletionMenu" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CompletionMenu"]
layout_mode = 0
offset_left = 540.0
offset_top = 300.0
offset_right = 635.0
offset_bottom = 366.0

[node name="PlayAgainButton" type="Button" parent="CompletionMenu/VBoxContainer"]
layout_mode = 2
text = "Play Again?"

[node name="QuitButton" type="Button" parent="CompletionMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="FinishPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_bt76a")
volume_db = -10.0

[node name="BestTimePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_djwj0")
volume_db = -10.0

[node name="HoverSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e0pfi")

[node name="ClickSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_o3bws")
volume_db = -10.0
